--- a/FRONTEND/src/Components/FormElements/DropDown.css
+++ b/FRONTEND/src/Components/FormElements/DropDown.css
@@ -1,15 +1,10 @@
-.App{
+.dropdown{
     width: 100%;
-    height: fit-content;
 }
-
-button{
+select{
     width: 100%;
     height: 45px;
 
     border: 2px solid rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-
     font-size: 1rem;
-    cursor: pointer;
 }
