--- a/FRONTEND/src/Components/FormElements/Number.css
+++ b/FRONTEND/src/Components/FormElements/Number.css
@@ -1,15 +1,11 @@
-.App{
+.number input{
+    margin: 0;
     width: 100%;
-    height: fit-content;
-}
-
-button{
-    width: 100%;
-    height: 45px;
+    height: 40px;
+    padding-inline: 5px;
 
     border: 2px solid rgba(0, 0, 0, 0.5);
     border-radius: 5px;
 
     font-size: 1rem;
-    cursor: pointer;
 }
