--- a/FRONTEND/src/Components/VehicleRegistration/RegisterVehicle.css
+++ b/FRONTEND/src/Components/VehicleRegistration/RegisterVehicle.css
@@ -1,8 +1,72 @@
 .register{
-    width: 80%;
-    height: 100%;
-    
+    width:fit-content;
+    height: 580px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+}
+
+.register label,br{
+    display: none;
+}
+
+header{
+    width: 100%;
+    height: 10%;
+    text-align: center;
+    margin-bottom: 10px;
+}
+header h1{
+    margin-top: 15px;
+}
+
+.register input{
+    width: 337px;
+}
+
+.register select{
+    border-radius: 5px;
+}
+
+.register form{
+    width: 350px;
+    height: 90%;
+
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
+}
+
+.register-vehicleName,.vehicle,.fuel,.hour,.day,.week{
+    height: fit-content;
+}
+
+.register-price{
+    height: 30%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-between;
+}
+
+.register-image{
+    height: 25px;
+    padding-block: 10px;
+    cursor: pointer;
+
+    border-radius: 5px;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width:350px){
+    .register{
+        width: 100%;
+        padding-inline:15px ;
+    }
+    .register form,.register-vehicleName,.hour,.day,.week{
+        width: 100%;
+    }
+    .register input{
+        width: 95%;
+    }
 }
