--- a/FRONTEND/src/Components/VehicleSearch/Search.css
+++ b/FRONTEND/src/Components/VehicleSearch/Search.css
@@ -28,9 +28,10 @@
     
     display: flex;
     flex-wrap: wrap;
+    column-gap: 3.5%;
     row-gap: 1.5em;
 
-    justify-content: space-between;
+    justify-content:flex-start;
     align-content: space-between;
 }
 
@@ -52,7 +53,8 @@
     }
     .result-card{
         overflow-y: visible;
-        width: 100%;
+        width:100%;
+        column-gap: 4.5%;
         z-index: 1;
     }
 }
@@ -84,6 +86,7 @@
     }
     .result-card{
         width: max(85%,625px);
+        column-gap: 3%;
         margin: auto;
     }
     .search-filter{
