--- a/FRONTEND/src/Components/VehicleSearchForm/SearchDate.css
+++ b/FRONTEND/src/Components/VehicleSearchForm/SearchDate.css
@@ -8,6 +8,7 @@
 .date input{
     margin-top: 2px;
     border: 0;
+    border-radius: 0;
     border-bottom: 1px solid;
     width: 100%;
     height: 40px;
