--- a/FRONTEND/src/Components/VehicleSearchForm/SearchForm.css
+++ b/FRONTEND/src/Components/VehicleSearchForm/SearchForm.css
@@ -1,5 +1,5 @@
 .search-form{
-    width: 98%;
+    width: 100%;
     height: fit-content;
     margin: 10px auto ;
 }
@@ -14,6 +14,14 @@
 .location{
     margin: 2.5px;
     width: 25%;
+}
+
+.location select{
+    margin-top: 2px;
+    border: 0;
+    border-bottom: 1px solid;
+    width: 100%;
+    height: 41px;
 }
 
 
