vehicle registration and other bug fixes

--- a/FRONTEND/src/Components/Dashboard/Row.css
+++ b/FRONTEND/src/Components/Dashboard/Row.css
@@ -4,7 +4,7 @@
     margin-block: 2.5px;
 
     display:grid;
-    grid-template-columns: 0.3fr repeat(4,1fr);
+    grid-template-columns: 0.3fr repeat(5,1fr);
     grid-template-rows: 1fr;
 
     background-color: rgba(246, 244, 244, 0.7);
@@ -16,13 +16,14 @@
     margin-top: 1px;
 }
 
-.row-check,.row-vehicle-name,.row-fuel-type,.row-vehicle-type,.row-vehicle-price{
+.row-check,.row-vehicle-name,.row-fuel-type,.row-vehicle-type,.row-vehicle-price,.row-vehicle-location{
     padding: 8px;
     margin-inline:1.5px;
     background-color: white;
 }
 
 .row-check{
+    margin-left:0 ;
     text-align: center;
 }
 
