--- a/FRONTEND/src/Components/Dashboard/Dashboard.css
+++ b/FRONTEND/src/Components/Dashboard/Dashboard.css
@@ -1,30 +1,92 @@
 .dashboard{
     width: 100%;
-    height: 90vh;
+    height: 90%;
     display: flex;
     justify-content: space-between;
 }
 
 .sidebar{
     width: 20%;
+    transition: 1.2s ease-in;
+}
+
+.collapsed-sidebar{
+    transition: 1.2s ease-out;
+    width:200px;
+}
+
+.show-sidebar{
+    display: none;
+}
+
+.user{
+    height: 25%;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    text-align: center;
+
+    border-bottom: 1px solid black;
+}
+
+.functionality{
+    background-color: black;
+    color:white;
+}
+
+.functionality button{
+    height: 60px;
+    border-radius: 0;
+    border: 0;
+    border-bottom:1px solid black;
+}
+
+.show-user{
+    display: flex;
+    height: 25%;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    text-align: center;
+
+    border-bottom: 1px solid black;
+}
+.show-functionality{
+    display: block;
 }
 
 .content{
-    width: 80%;
+    width: 90%;
     height: 100%;
     background-color: rgba(239, 242, 244, 0.7);
 }
 
 .table{
-    width: 75%;
-    height: 85%;
+    width: 90%;
+    height: 500px;
     margin: 50px auto;
 
     display: flex;
     flex-wrap: wrap;
-    align-content: flex-start;
+    justify-content: flex-end;
+}
 
-    overflow-y:scroll;
+.result-rows{
+    width: 100%;
+    height: 400px;
+    margin-bottom: 10px;
+
+    overflow-y:auto;
+}
+
+.result-rows::-webkit-scrollbar{
+    display: none;
 }
 
 .heading{
@@ -32,7 +94,6 @@
     height: 40px;
     font-weight: 600;
     margin-bottom: 5px;
-    background-color: white;
     color:rgba(85, 84, 84, 0.995);
 }
 .heading div{
@@ -40,8 +101,44 @@
     border-radius: 4px;
 }
 
-@media screen and (max-width:980px) {
+.row-delete-active{
+    background-color: rgb(255, 24, 24);
+    width: 60px;
+}
+
+.row-delete-inactive{
+    width: 60px;
+    background-color: rgb(211, 211, 211);
+    cursor:default;
+}
+
+@media screen and (max-width:875px){
+    .sidebar{
+        width: 60px;
+    }
+    .user,.functionality{
+        display:none;
+    }
+    .content{
+        width: 95%;
+    }
     .table{
         width: 90%;
+        text-align: center;
+    }
+    .show-sidebar{
+        display: block;
+        width: 60px;
+        position: fixed;
+        border-radius: 0;
+    }
+}
+
+@media screen and (max-width:750px){
+    .content{
+        width: 700px;
+    }
+    .table{
+        width: 650px;
     }
 }
