--- a/FRONTEND/src/Components/Navigation/NavBar.css
+++ b/FRONTEND/src/Components/Navigation/NavBar.css
@@ -4,12 +4,60 @@ nav{
     box-shadow: 0 4px 2px -2px rgba(0,0,0,0.2);
 
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 nav button{
-    width: 100px;
-    margin: 5px;
+    width: fit-content;
+    padding-inline: 5px;
+    margin-block: 5px;
+    margin-inline:10px ;
     height: 50px;
+    
+    border-radius: 0;
+    border: 0;
+    /* border:1px solid; */
+
+    background-color: white;
+    font-size: 1.2rem;
+}
+
+nav button:hover{
+    background-color: whitesmoke;
+}
+
+nav h1{
+    margin-top: 10px;
+}
+
+.logo{
+    text-align: center;
+}
+
+.nav-button{
+    width: 280px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.img-container{
+    width: 40px;
+    height: 40px;
+    margin-top: 10px;
+    margin-inline:5px
+}
+
+.search-icon{
+    width: 40px;
+    height: 40px;
+}
+
+.dashboard-btn{
+    margin-right:0 ;
+}
+
+.logout-btn,.login-btn{
+    margin-right:5px ;
+    
 }
 
 @media screen and (max-width:330px){
