--- a/FRONTEND/src/Components/Navigation/NavBar.css
+++ b/FRONTEND/src/Components/Navigation/NavBar.css
@@ -15,7 +15,6 @@ nav button{
     
     border-radius: 0;
     border: 0;
-    /* border:1px solid; */
 
     background-color: white;
     font-size: 1.2rem;
@@ -30,11 +29,13 @@ nav h1{
 }
 
 .logo{
+    margin-left: 10px;
     text-align: center;
 }
 
 .nav-button{
     width: 280px;
+    margin-right: 10px;
     display: flex;
     justify-content: flex-end;
 }
